Fixes for spacing and font size on contact portlet.

--- a/skins/agcommon_styles/_portlets.scss
+++ b/skins/agcommon_styles/_portlets.scss
@@ -303,9 +303,14 @@
     .portletItem {
         padding: 0;
 
-        p {
+        > p, 
+        > div {
+            font-size: 0.875em;
+            line-height: 1.375em;
+        }
+        
+        p, div {
             margin: 0 0 0.125em 0;
-            font-size: 0.9375em;
         }
         
         h3 {
